feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1393,11 +1393,7 @@
     ],
     "no_completion": "<@Red>You haven't added <@Magenta>{{ $completion }}<@Red> yet.",
     "confirm_cancel": "<@Green>The operation has been canceled.",
-    "less_tip": [
-      "<@Yellow>┌────────────────────────────────────────────────────────────────────────────┐\n",
-      "<@Yellow>│<@Cyan>Press <@Magenta>Enter<@Cyan> key to view more, or any <@Magenta>other key<@Cyan> to exit! (<@Magenta>{{ $lines }}<@Cyan> lines remaining)<@Yellow>│\n",
-      "<@Yellow>└────────────────────────────────────────────────────────────────────────────┘<@Cyan>"
-    ],
+    "less_tip": "<@Cyan>Press <@Magenta>Enter<@Cyan> key to view more, or any <@Magenta>other key<@Cyan> to exit! (<@Magenta>{{ $lines }}<@Cyan> lines remaining)",
     "comp_hide": "⚠️Due to the limited display area size, some completions have been hidden⚠️\nYou can filter by entering the prefix of the completion and pressing Tab",
     "min_area": "The area is too small!",
     "example_color": "<@Cyan>",
