--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1341,11 +1341,7 @@
     ],
     "no_completion": "<@Red>你还未添加 <@Magenta>{{ $completion }}<@Red> 补全",
     "confirm_cancel": "<@Green>操作取消!",
-    "less_tip": [
-      "<@Yellow>┌───────────────────────────────────────────────────────┐\n",
-      "<@Yellow>│<@Cyan>按下 <@Magenta>Enter<@Cyan> 键查看更多, 按下 <@Magenta>其他任意键<@Cyan> 退出! (剩余 <@Magenta>{{ $lines }} <@Cyan>行)<@Yellow>│\n",
-      "<@Yellow>└───────────────────────────────────────────────────────┘<@Cyan>"
-    ],
+    "less_tip": "<@Cyan>按下 <@Magenta>Enter<@Cyan> 键查看更多, 按下 <@Magenta>其他任意键<@Cyan> 退出! (剩余 <@Magenta>{{ $lines }} <@Cyan>行)",
     "comp_hide": "⚠️由于显示区域限制, 一些补全被隐藏⚠️\n你可以通过键入补全的前缀并按 Tab 键进行过滤",
     "min_area": "显示区域宽度或高度太小!",
     "example_color": "<@Cyan>",
