chore(scripts): update

--- a/scripts/template/language/en-US.json
+++ b/scripts/template/language/en-US.json
@@ -4,14 +4,20 @@
     {
       "name": "--version",
       "alias": ["-V"],
-      "tip": "Show the version."
+      "tip": ["Show the version."]
     }
   ],
   "common_options": [
     {
       "name": "--help",
       "alias": ["-h"],
-      "tip": "Show help."
+      "tip": ["Show help."]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "",
+      "description": []
+    }
+  }
 }
