--- a/scripts/template/language/zh-CN.json
+++ b/scripts/template/language/zh-CN.json
@@ -4,14 +4,20 @@
     {
       "name": "--version",
       "alias": ["-V"],
-      "tip": "显示版本信息"
+      "tip": ["显示版本信息"]
     }
   ],
   "common_options": [
     {
       "name": "--help",
       "alias": ["-h"],
-      "tip": "显示帮助信息"
+      "tip": ["显示帮助信息"]
     }
-  ]
+  ],
+  "info": {
+    "completion_info": {
+      "url": "",
+      "description": []
+    }
+  }
 }
