--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -827,8 +827,8 @@
                   ]
                 },
                 {
-                  "name": "1 (默认值)",
-                  "tip": ["设置为 1\n", "补全提示信息跟随输入光标显示"]
+                  "name": "1",
+                  "tip": ["设置为 1 (默认值)\n", "补全提示信息跟随输入光标显示"]
                 }
               ]
             },
