feat(completions): update volta

--- a/completions/volta/language/en-US.json
+++ b/completions/volta/language/en-US.json
@@ -1,6 +1,10 @@
 {
   "root": [
     {
+      "name": "fetch",
+      "tip": ["Fetches a tool to the local machine"]
+    },
+    {
       "name": "pin",
       "symbol": "SpaceTab",
       "tip": [
@@ -147,6 +151,10 @@
     {
       "name": "--verbose",
       "tip": "Enables verbose diagnostics"
+    },
+    {
+      "name": "--very-verbose",
+      "tip": ["Enables trace-level diagnostics"]
     },
     {
       "name": "--quiet",
