--- a/completions/volta/language/zh-CN.json
+++ b/completions/volta/language/zh-CN.json
@@ -1,6 +1,10 @@
 {
   "root": [
     {
+      "name": "fetch",
+      "tip": ["将工具获取到本地"]
+    },
+    {
       "name": "pin",
       "symbol": "SpaceTab",
       "tip": ["锁定项目运行时或包管理器\n", "E: pin node@lts"]
@@ -129,6 +133,10 @@
     {
       "name": "--verbose",
       "tip": "启用详细诊断"
+    },
+    {
+      "name": "--very-verbose",
+      "tip": ["启用跟踪级诊断"]
     },
     {
       "name": "--quiet",
