feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -120,7 +120,7 @@
     {
       "name": "config",
       "symbol": "SpaceTab",
-      "tip": ["Get or set the configuration.\n", "{{ $info.config.example }}"],
+      "tip": ["Get/Set the configuration.\n", "{{ $info.config.example }}"],
       "next": [
         {
           "name": "language",
@@ -288,9 +288,7 @@
           "symbol": "SpaceTab",
           "tip": [
             "Set the symbol in the completion tip.(😄🤔😎)\n",
-            "The meaning of symbols can be understood through completions. For detailed information, please visit them:\n",
-            "Github: https://github.com/abgox/PSCompletions/blob/main/README.md#about-special-symbols\n",
-            "Gitee:  https://gitee.com/abgox/PSCompletions/blob/main/README.md#about-special-symbols"
+            "For detail: https://pscompletions.pages.dev/command/#menu-symbol"
           ],
           "next": [
             {
@@ -298,9 +296,7 @@
               "symbol": "SpaceTab",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.SpaceTab }}\n",
-                "Setting it will affect all completion item with this type of symbol.\n",
-                "When it appears in the completion item, it means that after you apply it,\n",
-                "you can press Space and Tab key to continue to get command completions."
+                "Setting it will affect all completion item with this type of symbol."
               ],
               "next": [
                 {
@@ -323,10 +319,7 @@
               "symbol": "SpaceTab",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.WriteSpaceTab }}\n",
-                "Setting it will affect all completion item with this type of symbol.\n",
-                "When it appears in the completion item, it means that after you apply it,\n",
-                "you can press Space and enter a string, then press Space and Tab key to continue to get command completions.\n",
-                "If the string has Spaces, Please use \"\" or '' to wrap it. e.g. 'test content'"
+                "Setting it will affect all completion item with this type of symbol."
               ],
               "next": [
                 {
@@ -349,9 +342,7 @@
               "symbol": "SpaceTab",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.OptionTab }}\n",
-                "Setting it will affect all completion item with this type of symbol.\n",
-                "When it appears in the completion item, it means that after you apply it (option completion),\n",
-                "you can press Space and Tab key to continue to get option completions. (e.g. --verbose)"
+                "Setting it will affect all completion item with this type of symbol."
               ],
               "next": [
                 {
@@ -1592,8 +1583,8 @@
     },
     "config": {
       "example": [
-        "E: psc config language               --- Get language\n",
-        "   psc config language zh-CN         --- Set to zh-CN"
+        "E: psc config language           --- Get language\n",
+        "   psc config language zh-CN     --- Set to zh-CN"
       ],
       "done": [
         "<@Green>PSCompletions's configuration modified successfully!\n",
@@ -1665,7 +1656,7 @@
       "example": [
         "E: psc completion psc enable_tip       --- If it has a value, return the value\n",
         "   psc completion psc enable_tip 0     --- Set psc completion to not display tip\n",
-        "   psc completion psc language en-US      --- Set the psc completion language to zh-CN"
+        "   psc completion psc language zh-CN   --- Set the psc completion language to zh-CN"
       ],
       "done": [
         "<@Green>{{ $completion }} 's special configuration modified successfully!\n",
@@ -1706,7 +1697,7 @@
     },
     "menu": {
       "example": [
-        "E: psc menu config enable_tip 0                  --- Hide completion tip\n",
+        "E: psc menu config enable_tip 0                     --- Hide completion tip\n",
         "   psc menu symbol SpaceTab \"\"                      --- Hide symbol\n",
         "   psc menu line_theme single_line_round_border     --- Toggle the built-in border style theme\n",
         "   psc menu config                                  --- Set menu configurations"
@@ -1756,8 +1747,8 @@
       },
       "config": {
         "example": [
-          "E: psc menu config enable_tip 0         --- Hide completion tip\n",
-          "   psc menu config enable_menu 0           --- Disable completion menu provided by PSCompletions module\n",
+          "E: psc menu config enable_tip 0       --- Hide completion tip\n",
+          "   psc menu config enable_menu 0      --- Disable completion menu provided by PSCompletions module\n",
           "   psc menu config filter_symbol []   --- Set the symbol of the filter area"
         ],
         "err": {
