--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -265,9 +265,7 @@
           "symbol": "SpaceTab",
           "tip": [
             "设置补全提示中的表情符号(😄🤔😎)\n",
-            "符号的意义可以通过补全了解, 相关详细信息, 请访问: \n",
-            "Github: https://github.com/abgox/PSCompletions/blob/main/README-CN.md#关于特殊符号\n",
-            "Gitee:  https://gitee.com/abgox/PSCompletions/blob/main/README-CN.md#关于特殊符号"
+            "详情: https://pscompletions.pages.dev/command/#menu-symbol"
           ],
           "next": [
             {
@@ -275,8 +273,7 @@
               "symbol": "SpaceTab",
               "tip": [
                 "当前值: {{ $PSCompletions.config.SpaceTab }}\n",
-                "设置它, 会影响所有的补全提示中的此类型表情符号\n",
-                "当它在补全提示中出现, 表示选用此补全后, 你可以按下 Space(空格键) 和 Tab 键继续获取补全候选"
+                "设置它, 会影响所有的补全提示中的此类型表情符号"
               ],
               "next": [
                 {
@@ -298,9 +295,7 @@
               "symbol": "SpaceTab",
               "tip": [
                 "当前值: {{ $PSCompletions.config.WriteSpaceTab }}\n",
-                "设置它, 会影响所有的补全提示中的此类型表情符号\n",
-                "当它在补全提示中出现, 表示选用此补全后, 你可以按下 Space(空格键)，再输入一个内容, 然后按下 Space(空格键) 和 Tab 键继续获取补全候选\n",
-                "如果输入内容带有空格, 请使用 \"\" 或者 '' 包裹, e.g. 'test content'"
+                "设置它, 会影响所有的补全提示中的此类型表情符号"
               ],
               "next": [
                 {
@@ -322,8 +317,7 @@
               "symbol": "SpaceTab",
               "tip": [
                 "当前值: {{ $PSCompletions.config.OptionTab }}\n",
-                "设置它, 会影响所有的补全提示中的此类型表情符号\n",
-                "当它在补全提示中出现, 表示选用此补全后, 你可以按下 Space(空格键) 和 Tab 键继续获取选项类补全候选(如 --verbose)"
+                "设置它, 会影响所有的补全提示中的此类型表情符号"
               ],
               "next": [
                 {
@@ -1655,7 +1649,7 @@
     "menu": {
       "example": [
         "E: psc menu config enable_tip 0                     --- 不显示补全提示信息\n",
-        "   psc menu symbol SpaceTab \"\"                    --- 设置符号为空字符串(这可以隐藏符号)\n",
+        "   psc menu symbol SpaceTab \"\"                      --- 设置符号为空字符串(这可以隐藏符号)\n",
         "   psc menu line_theme single_line_round_border     --- 切换内置的边框线条主题\n",
         "   psc menu config                                  --- 设置补全菜单配置"
       ],
