feat(completions): update git

--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -442,6 +442,10 @@
       ],
       "options": [
         {
+          "name": "-",
+          "tip": ["Switch to the previous branch."]
+        },
+        {
           "name": "-b",
           "tip": ["U: -b <new_branch>\n", "Create and switch to a new branch"]
         },
