--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -403,6 +403,10 @@
       ],
       "options": [
         {
+          "name": "-",
+          "tip": ["切换到之前切换的分支。"]
+        },
+        {
           "name": "-b",
           "tip": ["U: -b <new_branch>\n", "创建并切换到新的分支"]
         },
