feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -240,8 +240,16 @@
               "name": "\"\"",
               "tip": [
                 "Set to \"\" (Default)\n",
-                "It means using the default repository (Github/Gitee).\n"
+                "It means the repository will be selected based on the language (Github/Gitee)."
               ]
+            },
+            {
+              "name": "\"https://raw.githubusercontent.com/abgox/PSCompletions/main\"",
+              "tip": ["Use Github repo"]
+            },
+            {
+              "name": "\"https://gitee.com/abgox/PSCompletions/raw/main\"",
+              "tip": ["Use Gitee repo"]
             },
             {
               "name": "\"https://abgox.github.io/PSCompletions\"",
