--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -212,7 +212,7 @@
           "tip": [
             "当前值: \"{{ $PSCompletions.config.url }}\"\n",
             "设置远程补全信息的地址\n",
-            "默认值为 \"\"，表示使用默认仓库(Github/Gitee)\n",
+            "默认值为 \"\"，表示根据语言自动选择仓库(Github/Gitee)\n",
             "{{ $info.config.url.example }}"
           ],
           "next": [
@@ -220,8 +220,16 @@
               "name": "\"\"",
               "tip": [
                 "设置为 \"\" (默认值)\n",
-                "它表示使用默认仓库(Github/Gitee)"
+                "它表示根据语言自动选择仓库(Github/Gitee)"
               ]
+            },
+            {
+              "name": "\"https://raw.githubusercontent.com/abgox/PSCompletions/main\"",
+              "tip": ["使用 Github 地址"]
+            },
+            {
+              "name": "\"https://gitee.com/abgox/PSCompletions/raw/main\"",
+              "tip": ["使用 Gitee 地址"]
             },
             {
               "name": "\"https://abgox.github.io/PSCompletions\"",
