feat(completions): update cargo

--- a/completions/cargo/language/en-US.json
+++ b/completions/cargo/language/en-US.json
@@ -207,7 +207,10 @@
       "alias": [
         "c"
       ],
-      "tip": "Analyze the current package and report errors, but don't build object files.",
+      "tip": [
+        "U: check|c\n",
+        "Analyze the current package and report errors, but don't build object files."
+      ],
       "options": [
         {
           "name": "--ignore-rust-version",
@@ -449,7 +452,10 @@
       "alias": [
         "d"
       ],
-      "tip": "Build this package's and its dependencies' documentation.",
+      "tip": [
+        "U: doc|d\n",
+        "Build this package's and its dependencies' documentation."
+      ],
       "options": [
         {
           "name": "--open",
