--- a/completions/cargo/language/zh-CN.json
+++ b/completions/cargo/language/zh-CN.json
@@ -207,7 +207,10 @@
       "alias": [
         "c"
       ],
-      "tip": "分析当前包并报告错误, 但不构建对象文件。",
+      "tip": [
+        "U: check|c\n",
+        "分析当前包并报告错误, 但不构建对象文件。"
+      ],
       "options": [
         {
           "name": "--ignore-rust-version",
@@ -449,7 +452,10 @@
       "alias": [
         "d"
       ],
-      "tip": "构建此包及其依赖项的文档。",
+      "tip": [
+        "U: doc|d\n",
+        "构建此包及其依赖项的文档。"
+      ],
       "options": [
         {
           "name": "--open",
