feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1334,7 +1334,7 @@
       "\n",
       "<@Blue>PSCompletions<@Cyan> will take up two global names.\n",
       "  <@Magenta>PSCompletions<@Cyan> => A function name. The core function of the module export. (<@Magenta>psc<@Cyan> is actually its alias.)\n",
-      " <@Magenta>$PSCompletions<@Cyan> => A variable name. Save all information related to the module. (<@Yellow>You can't modify it.<@Cyan>)\n",
+      " <@Magenta>$PSCompletions<@Cyan> => A variable name. Save all data related to the module. (<@Yellow>You can't modify it.<@Cyan>)\n",
       "\n",
       "For more information, please visit the project:\n",
       "  Website : <@Blue>https://pscompletions.pages.dev<@Cyan>\n",
