--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1334,7 +1334,7 @@
       "\n",
       "<@Blue>PSCompletions<@Cyan> 模块只会占用两个全局命名\n",
       "  <@Magenta>PSCompletions<@Cyan> => 函数名, 模块导出的核心函数(<@Magenta>psc<@Cyan> 其实就是它的别名)\n",
-      " <@Magenta>$PSCompletions<@Cyan> => 变量名, 存储模块相关的所有信息(<@Yellow>你不能修改它<@Cyan>)\n",
+      " <@Magenta>$PSCompletions<@Cyan> => 变量名, 存储模块相关的所有数据(<@Yellow>你不能修改它<@Cyan>)\n",
       "\n",
       "更多相关信息, 请访问:\n",
       "  Website : <@Blue>https://pscompletions.pages.dev<@Cyan>\n",
@@ -1849,7 +1849,7 @@
         ]
       },
       "completion": {
-        "tip": "重置(移除) {{ $completion }} 的所有特殊配置或指定特殊配置",
+        "tip": "重置(移除) {{ $completion }} 的所有特殊配置或指定的特殊配置",
         "tip_v": "重置(移除) {{ $completion }} 的特殊配置 --- {{ $config_item }}",
         "example": [
           "E: psc reset completion *              --- 重置(移除)所有补全的特殊配置\n",
