feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1380,7 +1380,7 @@
         "(The added completion will be automatically migrated.)\n",
         "<@Magenta>{{ $PSCompletions.version }}<@Cyan> => <@Magenta>{{ $PSCompletions.config.enable_module_update }}\n<@Cyan>",
         "{{ ",
-        "$version_list=$PSCompletions.get_raw_content(\"$($PSCompletions.path.core)\\CHANGELOG.json\") | ConvertFrom-Json;",
+        "$version_list=$PSCompletions.get_raw_content(\"$($PSCompletions.path.temp)\\CHANGELOG.json\") | ConvertFrom-Json;",
         "$lang = if($PSCompletions.language -eq 'zh-CN'){ 'zh-CN' }else{ 'en-US' };",
         "$num=1;",
         "foreach($_ in $version_list) {",
