--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1379,7 +1379,7 @@
         "<@Yellow>PSCompletions 模块有更新了, 是否更新?(已添加的补全会自动迁移)\n",
         "<@Magenta>{{ $PSCompletions.version }}<@Cyan> => <@Magenta>{{ $PSCompletions.config.enable_module_update }}\n<@Cyan>",
         "{{ ",
-        "$version_list=$PSCompletions.get_raw_content(\"$($PSCompletions.path.core)\\CHANGELOG.json\") | ConvertFrom-Json;",
+        "$version_list=$PSCompletions.get_raw_content(\"$($PSCompletions.path.temp)\\CHANGELOG.json\") | ConvertFrom-Json;",
         "$lang = if($PSCompletions.language -eq 'zh-CN'){ 'zh-CN' }else{ 'en-US' };",
         "$num=1;",
         "foreach($_ in $version_list) {",
