feat(completions): update git

--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -441,7 +441,10 @@
         },
         {
           "name": "-d",
-          "symbol": "WriteSpaceTab",
+          "symbol": [
+            "WriteSpaceTab",
+            "SpaceTab"
+          ],
           "tip": [
             "U: -d <branch>\n",
             "Delete the specified branch."
@@ -449,7 +452,10 @@
         },
         {
           "name": "-D",
-          "symbol": "WriteSpaceTab",
+          "symbol": [
+            "WriteSpaceTab",
+            "SpaceTab"
+          ],
           "tip": [
             "U: -D <branch>\n",
             "Force delete the specified branch."
@@ -457,7 +463,10 @@
         },
         {
           "name": "-m",
-          "symbol": "WriteSpaceTab",
+          "symbol": [
+            "WriteSpaceTab",
+            "SpaceTab"
+          ],
           "tip": [
             "U: -m <old_branch> <new_branch>\n",
             "Rename the specified branch."
@@ -465,7 +474,10 @@
         },
         {
           "name": "-M",
-          "symbol": "WriteSpaceTab",
+          "symbol": [
+            "WriteSpaceTab",
+            "SpaceTab"
+          ],
           "tip": [
             "U: -M <old_branch> <new_branch>\n",
             "Force rename the specified branch."
@@ -719,7 +731,10 @@
           "alias": [
             "--delete"
           ],
-          "symbol": "WriteSpaceTab",
+          "symbol": [
+            "WriteSpaceTab",
+            "SpaceTab"
+          ],
           "tip": [
             "U: -d|--delete <tag>\n",
             "Delete tags."
@@ -730,7 +745,10 @@
           "alias": [
             "--verify"
           ],
-          "symbol": "WriteSpaceTab",
+          "symbol": [
+            "WriteSpaceTab",
+            "SpaceTab"
+          ],
           "tip": [
             "U: -v|--verify <tag>\n",
             "Verify tags"
@@ -759,11 +777,15 @@
         {
           "name": "core.editor",
           "tip": [
-            "Configure the default editor\n",
-            "To change it to VS Code, manually copy and run the following command:\n",
-            "git config --global --replace-all core.editor 'code --wait'"
+            "Configure the default editor"
           ],
           "next": [
+            {
+              "name": "\"code --wait\"",
+              "tip": [
+                "Configure the default editor as vscode"
+              ]
+            },
             {
               "name": "vim",
               "tip": "Configure the default editor as vim"
