--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -441,7 +441,10 @@
         },
         {
           "name": "-d",
-          "symbol": "WriteSpaceTab",
+          "symbol": [
+            "WriteSpaceTab",
+            "SpaceTab"
+          ],
           "tip": [
             "U: -d <branch>\n",
             "删除指定的分支。"
@@ -449,7 +452,10 @@
         },
         {
           "name": "-D",
-          "symbol": "WriteSpaceTab",
+          "symbol": [
+            "WriteSpaceTab",
+            "SpaceTab"
+          ],
           "tip": [
             "U: -D <branch>\n",
             "强制删除指定的分支。"
@@ -457,7 +463,10 @@
         },
         {
           "name": "-m",
-          "symbol": "WriteSpaceTab",
+          "symbol": [
+            "WriteSpaceTab",
+            "SpaceTab"
+          ],
           "tip": [
             "U: -m <old_branch> <new_branch>\n",
             "重命名指定的分支。"
@@ -465,7 +474,10 @@
         },
         {
           "name": "-M",
-          "symbol": "WriteSpaceTab",
+          "symbol": [
+            "WriteSpaceTab",
+            "SpaceTab"
+          ],
           "tip": [
             "U: -M <old_branch> <new_branch>\n",
             "强制重命名指定的分支。"
@@ -719,7 +731,10 @@
           "alias": [
             "--delete"
           ],
-          "symbol": "WriteSpaceTab",
+          "symbol": [
+            "WriteSpaceTab",
+            "SpaceTab"
+          ],
           "tip": [
             "U: -d|--delete <tag>\n",
             "删除标签。"
@@ -730,7 +745,10 @@
           "alias": [
             "--verify"
           ],
-          "symbol": "WriteSpaceTab",
+          "symbol": [
+            "WriteSpaceTab",
+            "SpaceTab"
+          ],
           "tip": [
             "U: -v|--verify <tag>\n",
             "验证标签。"
@@ -759,11 +777,15 @@
         {
           "name": "core.editor",
           "tip": [
-            "配置默认编辑器\n",
-            "要将其更改为 VS Code, 请手动复制并运行以下命令: \n",
-            "git config --global --replace-all core.editor 'code --wait'"
+            "配置默认编辑器"
           ],
           "next": [
+            {
+              "name": "\"code --wait\"",
+              "tip": [
+                "将默认编辑器设置为 vscode"
+              ]
+            },
             {
               "name": "vim",
               "tip": "将默认编辑器设置为 vim"
