feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1372,6 +1372,9 @@
         "Download url: {{ $download_info.url }}\n",
         "Save path   : {{ $download_info.file }}\n",
         "If you are sure that your network is working and you are still getting errors, please submit an issue. ( https://github.com/abgox/PSCompletions/issues )"
+      ],
+      "alias_conflict": [
+        "<@Yellow>Alias <@Magenta>{{ $conflict_alias_list -join ' ' }}<@Yellow> already exists, please handle alias conflicts manually."
       ]
     },
     "module": {
