--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1372,6 +1372,9 @@
         "文件下载地址: {{ $download_info.url }}\n",
         "文件保存路径: {{ $download_info.file }}\n",
         "如果确定不是网络问题, 请提交 issue ( https://github.com/abgox/PSCompletions/issues )"
+      ],
+      "alias_conflict": [
+        "<@Yellow>别名 <@Magenta>{{ $conflict_alias_list -join ' ' }}<@Yellow> 已经存在，请手动处理别名冲突"
       ]
     },
     "module": {
