fix(completions): update description of completions

--- a/completions/arch/language/en-US.json
+++ b/completions/arch/language/en-US.json
@@ -22,7 +22,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Display machine architecture.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
