--- a/completions/arch/language/zh-CN.json
+++ b/completions/arch/language/zh-CN.json
@@ -22,7 +22,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "显示当前系统架构。\n",
-        "来源于 [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "补全基于 [uutils/coreutils](https://github.com/uutils/coreutils) 编写。"
       ]
     }
   }
