--- a/completions/basename/language/en-US.json
+++ b/completions/basename/language/en-US.json
@@ -47,7 +47,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Print NAME with any leading directory components removed.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
