--- a/completions/comm/language/en-US.json
+++ b/completions/comm/language/en-US.json
@@ -53,7 +53,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Compare two sorted files line by line.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
