--- a/completions/csplit/language/en-US.json
+++ b/completions/csplit/language/en-US.json
@@ -81,7 +81,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Split a file into sections determined by context lines.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
