--- a/completions/cut/language/en-US.json
+++ b/completions/cut/language/en-US.json
@@ -97,7 +97,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Print specified byte or field columns from each line of stdin or the input files.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
