--- a/completions/date/language/en-US.json
+++ b/completions/date/language/en-US.json
@@ -140,7 +140,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Print or set the system date and time.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
