--- a/completions/dd/language/en-US.json
+++ b/completions/dd/language/en-US.json
@@ -22,7 +22,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Copy, and optionally convert, a file system resource.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
