--- a/completions/df/language/en-US.json
+++ b/completions/df/language/en-US.json
@@ -192,7 +192,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Show information about the file system on which each FILE resides, or all file systems by default.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
