--- a/completions/dircolors/language/en-US.json
+++ b/completions/dircolors/language/en-US.json
@@ -49,7 +49,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Output commands to set the LS_COLORS environment variable.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
