--- a/completions/dirname/language/en-US.json
+++ b/completions/dirname/language/en-US.json
@@ -29,7 +29,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Strip last component from file name.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
