--- a/completions/du/language/en-US.json
+++ b/completions/du/language/en-US.json
@@ -296,7 +296,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Estimate file space usage.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
