--- a/completions/factor/language/en-US.json
+++ b/completions/factor/language/en-US.json
@@ -26,7 +26,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Print the prime factors of the given NUMBER(s).\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
