--- a/completions/fmt/language/en-US.json
+++ b/completions/fmt/language/en-US.json
@@ -147,7 +147,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Reformat paragraphs from input files (or stdin) to stdout.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
