--- a/completions/fold/language/en-US.json
+++ b/completions/fold/language/en-US.json
@@ -50,7 +50,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Writes each file (or standard input if no files are given) to standard output whilst breaking long lines.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
