--- a/completions/hashsum/language/en-US.json
+++ b/completions/hashsum/language/en-US.json
@@ -155,7 +155,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Compute and check message digests.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
