--- a/completions/join/language/en-US.json
+++ b/completions/join/language/en-US.json
@@ -129,7 +129,7 @@
       "description": [
         "For each pair of input lines with identical join fields, write a line to standard output.\n",
         "The default join field is the first, delimited by blanks.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
