--- a/completions/link/language/en-US.json
+++ b/completions/link/language/en-US.json
@@ -22,7 +22,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Call the link function to create a link named FILE2 to an existing FILE1.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
