--- a/completions/ln/language/en-US.json
+++ b/completions/ln/language/en-US.json
@@ -118,7 +118,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Make links between files.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
