--- a/completions/mktemp/language/en-US.json
+++ b/completions/mktemp/language/en-US.json
@@ -70,7 +70,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Create a temporary file or directory.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
