--- a/completions/nl/language/en-US.json
+++ b/completions/nl/language/en-US.json
@@ -200,7 +200,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Number lines of files.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
