--- a/completions/nproc/language/en-US.json
+++ b/completions/nproc/language/en-US.json
@@ -34,7 +34,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Print the number of cores available to the current process.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
