--- a/completions/numfmt/language/en-US.json
+++ b/completions/numfmt/language/en-US.json
@@ -221,7 +221,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Convert numbers from/to human-readable strings.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
