--- a/completions/od/language/en-US.json
+++ b/completions/od/language/en-US.json
@@ -253,7 +253,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Dump files in octal and other formats.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
