--- a/completions/b2sum/language/en-US.json
+++ b/completions/b2sum/language/en-US.json
@@ -95,7 +95,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Compute and check message digests.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
