--- a/completions/base64/language/en-US.json
+++ b/completions/base64/language/en-US.json
@@ -47,7 +47,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Encode/decode data and print to standard output.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
