--- a/completions/cksum/language/en-US.json
+++ b/completions/cksum/language/en-US.json
@@ -99,7 +99,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Print CRC and size for each file.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
