--- a/completions/env/language/en-US.json
+++ b/completions/env/language/en-US.json
@@ -99,7 +99,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Set each NAME to VALUE in the environment and run COMMAND.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
