--- a/completions/head/language/en-US.json
+++ b/completions/head/language/en-US.json
@@ -68,7 +68,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Print the first 10 lines of each 'FILE' to standard output.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
