--- a/completions/link/language/zh-CN.json
+++ b/completions/link/language/zh-CN.json
@@ -22,7 +22,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "调用 link 函数为现有的 FILE1 创建名为 FILE2 的链接。\n",
-        "来源于 [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "补全基于 [uutils/coreutils](https://github.com/uutils/coreutils) 编写。"
       ]
     }
   }
