--- a/completions/paste/language/en-US.json
+++ b/completions/paste/language/en-US.json
@@ -47,7 +47,7 @@
       "url": "https://github.com/uutils/coreutils",
       "description": [
         "Write lines consisting of the sequentially corresponding lines from each 'FILE', separated by 'TAB's, to standard output.\n",
-        "Come from [uutils/coreutils](https://github.com/uutils/coreutils)"
+        "Completion was written based on [uutils/coreutils](https://github.com/uutils/coreutils)"
       ]
     }
   }
