feat(completions): update git
Closes #51

--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -60,6 +60,12 @@
             "U: -j <n>\n",
             "Specify the number of threads for parallel cloning to speed up the process."
           ]
+        },
+        {
+          "name": "--sparse",
+          "tip": [
+            "Employ a sparse-checkout, with only files in the toplevel directory initially being present."
+          ]
         }
       ]
     },
