--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -60,6 +60,12 @@
             "U: -j <n>\n",
             "指定用于并行克隆的线程数以加速过程。"
           ]
+        },
+        {
+          "name": "--sparse",
+          "tip": [
+            "采用稀疏检出(sparse-checkout)，只检出顶层目录中的文件。"
+          ]
         }
       ]
     },
